Sets TargetRubyVersion for Rubocop

--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -1,2 +1,9 @@
+AllCops:
+  Exclude:
+    - 'vendor/**/*'
+    - 'spec/fixtures/**/*'
+    - 'tmp/**/*'
+  TargetRubyVersion: 2.2
+
 Rails:
   Enabled: true
