--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,6 @@
 [submodule "bundle/vim-better-whitespace"]
 	path = bundle/vim-better-whitespace
 	url = https://github.com/ntpeters/vim-better-whitespace.git
+[submodule "bundle/vim-sayonara"]
+	path = bundle/vim-sayonara
+	url = https://github.com/mhinz/vim-sayonara.git
