Saves all buffers when opening a terminal

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,5 +4,6 @@
   "solargraph.references": true,
   "solargraph.definitions": true,
   "solargraph.rename": true,
-  "solargraph.folding": true
+  "solargraph.folding": true,
+  "solargraph.symbols": true
 }
