--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,24 @@
 {
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.previewAction.onHover": false,
+  "explorer.file.root.template": "[icon] [hidden & 1][root] [fullpath]",
+  "explorer.file.showHiddenFiles": true,
+  "explorer.sources": [
+    {
+      "name": "file",
+      "expand": true
+    }
+  ],
+  "explorer.keyMappings": {
+    "h": "collapse",
+    "j": "nodeNext",
+    "k": "nodePrev",
+    "l": ["expandable?", "expand", ""],
+    "o": ["expandable?", "", "open"],
+    "v": "open:vsplit"
+  },
+
   "solargraph.formatting": true,
   "solargraph.references": true,
   "solargraph.definitions": true,
