Adds "solargraph.transport": "stdio" coc setting

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -25,5 +25,6 @@
   "solargraph.rename": true,
   "solargraph.folding": true,
   "solargraph.symbols": true,
-  "solargraph.diagnostics": true
+  "solargraph.diagnostics": true,
+  "solargraph.transport": "stdio"
 }
