Small change to README.md

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -25,6 +25,5 @@
   "solargraph.rename": true,
   "solargraph.folding": true,
   "solargraph.symbols": true,
-  "solargraph.diagnostics": true,
-  "solargraph.transport": "stdio"
+  "solargraph.diagnostics": true
 }
